[gd_scene load_steps=2 format=3 uid="uid://dlkvnrp2wvu2k"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_sttnl"]

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sttnl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "2 Day Platformer Game"

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "START"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "QUIT"

[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_button_down"]
